adds testng.xml

--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,7 @@
                 </goals>
                 <configuration>
                     <suiteXmlFiles>
-                        <suiteXmlFile>testng.xml</suiteXmlFile>
+                        <suiteXmlFile>/src/test/resources/testng.xml</suiteXmlFile>
                     </suiteXmlFiles>
                 </configuration>
             </plugin>
